HTML and CSS Setup with single fret marks added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,105 @@
     <title>Fretboard</title>
 </head>
 <body>
+    <div class="fretboard">
+        <!-- One div for every string -->
+        <div class="string">
+            <!-- One fret for every string -->
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret single-fretmark"></div> <!-- Adding a single fret mark -->
+            <div class="note-fret"></div>
+            <div class="note-fret single-fretmark"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret single-fretmark"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret double-fretmark"></div> <!-- Probably not possible bco pseudo before and after already used -->
+        </div>
+        <div class="string">
+            <!-- One fret for every string -->
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+        </div>
+        <div class="string">
+            <!-- One fret for every string -->
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+        </div>
+        <div class="string">
+            <!-- One fret for every string -->
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+        </div>
+        <div class="string">
+            <!-- One fret for every string -->
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+        </div>
+        <div class="string">
+            <!-- One fret for every string -->
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+            <div class="note-fret"></div>
+        </div>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
