Removed dot with opacity

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <div class="note-fret"></div>
             <div class="note-fret"></div>
             <div class="note-fret"></div>
-            <div class="note-fret double-fretmark"></div> <!-- Probably not possible bco pseudo before and after already used -->
+            <div class="note-fret"></div> <!-- Probably not possible bco pseudo before and after already used -->
+            
         </div>
         <div class="string">
             <!-- One fret for every string -->
