Added double fret marks test

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="note-fret"></div>
             <div class="note-fret"></div>
             <div class="note-fret"></div>
-            <div class="note-fret"></div> <!-- Probably not possible bco pseudo before and after already used -->
+            <div class="note-fret"><div class="double-fretmark"></div></div> <!-- Probably not possible bco pseudo before and after already used -->
             
         </div>
         <div class="string">
