Added instrument selector in settings

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <title>Fretboard</title>
 </head>
 <body>
-    <!-- REMOVE CONTENT OF FRETBOARD -->
+  <!-- Add new div with settings -->
+    <div class="settings">
+      <label for="instrument-selector">Selected Instrument: </label>
+      <select name="instrument-selector" id="instrument-selector">
+
+      </select>
+    </div>  
+
     <div class="fretboard">
-        <!-- One div for every string -->
     </div>
     <script src="./app.js"></script>
 </body>
