--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <label for="sharps">Sharps: </label>
         <input type="radio" class="acc-select" id="sharps" name="accidentals" value="sharps">
       </div>
-      
+      <label for="number-of-frets">Number of frets: </label>
+      <input type="number" id="number-of-frets" min="5" max="30" value="20">
       
     </div>  
 
