Added show all notes function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </div>
       <label for="number-of-frets">Number of frets: </label>
       <input type="number" id="number-of-frets" min="5" max="30" value="20">
-      
+      <label for="show-all-notes">Show all notes:</label>
+      <input type="checkbox" id="show-all-notes">
     </div>  
 
     <div class="fretboard">
