--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <input type="number" id="number-of-frets" min="5" max="30" value="20">
       <label for="show-all-notes">Show all notes:</label>
       <input type="checkbox" id="show-all-notes">
+      <label for="show-multiple-notes">Show multiple notes:</label>
+      <input type="checkbox" id="show-multiple-notes">
     </div>  
 
     <div class="fretboard">
