--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 
     <div class="fretboard">
     </div>
+    
+    <div class="note-name-section">
+      
+    </div>
+
     <script src="./app.js"></script>
 </body>
 </html>
